--- a/HRMTest/HRMTest.csproj
+++ b/HRMTest/HRMTest.csproj
@@ -47,6 +47,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="UnitTest1.cs" />
